--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,67 +8,119 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-    
-        <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="@string/connect4" />
 
     <TableLayout
+        android:id="@+id/tableLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="60dp" >
+        android:layout_marginTop="6dp" >
 
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center" >
 
             <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/play" 
-            
-                />
+                android:drawableLeft="@drawable/oneplayer"
+                android:gravity="right|center"
+                android:minWidth="300dp"
+                android:paddingRight="@dimen/pad"
+                android:text="@string/play"
+                android:textStyle="bold" />
+        </TableRow>
 
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center" >
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/twoplayer"
+                android:gravity="right|center"
+                android:paddingRight="@dimen/pad2"
+                android:text="@string/multiplay"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center" >
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/score" />
-
+                android:drawableLeft="@drawable/score"
+                android:gravity="right|center"
+                android:paddingRight="@dimen/pad3"
+                android:text="@string/score"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center" >
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/exit" />
-
+                android:gravity="right|center"
+                android:drawableLeft="@drawable/about"
+                android:paddingRight="@dimen/pad"
+                android:text="@string/about"
+                android:textStyle="bold" />
         </TableRow>
 
-        
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center" >
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right|center"
+                android:drawableLeft="@drawable/exit"
+                android:paddingRight="@dimen/pad"
+                android:text="@string/exit"
+                android:textStyle="bold" />
+        </TableRow>
     </TableLayout>
-    
-    
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/titletop"
+        android:textColor="@color/DarkRed"
+        android:textSize="35sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView1"
+        android:layout_toLeftOf="@+id/textView1"
+        android:contentDescription="@string/connect4"
+        android:src="@drawable/logo" />
+
 </RelativeLayout>
