--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="pad">100dp</dimen>
+    <dimen name="pad2">90dp</dimen>
+    <dimen name="pad3">80dp</dimen>
 
 </resources>
