--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
     android:background="@drawable/beige"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,7 +11,7 @@
 
     <TableLayout
         android:id="@+id/tableLayout1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="6dp" >
@@ -26,12 +26,15 @@
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/button"
                 android:drawableLeft="@drawable/oneplayer"
-                android:gravity="right|center"
+                android:drawablePadding="80dp"
+                android:gravity="center|left"
                 android:minWidth="300dp"
-                android:paddingRight="@dimen/pad"
                 android:text="@string/play"
                 android:textStyle="bold" />
+
         </TableRow>
 
         <TableRow
@@ -42,13 +45,15 @@
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/button"
                 android:drawableLeft="@drawable/twoplayer"
-                android:gravity="right|center"
-                android:paddingRight="@dimen/pad2"
+                android:gravity="center|left"
                 android:text="@string/multiplay"
-                android:textStyle="bold" />
+                android:textStyle="bold" 
+                android:drawablePadding="57dp"/>
         </TableRow>
 
         <TableRow
@@ -61,11 +66,13 @@
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/button"
                 android:drawableLeft="@drawable/score"
-                android:gravity="right|center"
-                android:paddingRight="@dimen/pad3"
+                android:gravity="center|left"
                 android:text="@string/score"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:drawablePadding="46dp" />
         </TableRow>
 
         <TableRow
@@ -78,11 +85,13 @@
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right|center"
+                android:layout_margin="5dp"
+                android:background="@drawable/button"
                 android:drawableLeft="@drawable/about"
-                android:paddingRight="@dimen/pad"
+                android:gravity="center|left"
                 android:text="@string/about"
-                android:textStyle="bold" />
+                android:textStyle="bold" 
+                android:drawablePadding="46dp" />
         </TableRow>
 
         <TableRow
@@ -95,32 +104,35 @@
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right|center"
+                android:layout_margin="5dp"
+                android:layout_marginRight="6dp"
+                android:background="@drawable/button"
                 android:drawableLeft="@drawable/exit"
-                android:paddingRight="@dimen/pad"
+                android:gravity="center|left"
                 android:text="@string/exit"
-                android:textStyle="bold" />
+                android:textStyle="bold" 
+                android:drawablePadding="46dp" />
         </TableRow>
     </TableLayout>
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/textView1"
+        android:contentDescription="@string/connect4"
+        android:src="@drawable/logo" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/imageView1"
         android:text="@string/titletop"
         android:textColor="@color/DarkRed"
-        android:textSize="35sp"
+        android:textSize="43sp"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView1"
-        android:layout_toLeftOf="@+id/textView1"
-        android:contentDescription="@string/connect4"
-        android:src="@drawable/logo" />
 
 </RelativeLayout>
