--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -3,35 +3,8 @@
     android:id="@+id/game_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/cachecolor"
-    android:orientation="vertical">
-	
-    <LinearLayout
-        android:id="@+id/affichagelogo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="76dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/connect4"
-            android:paddingLeft="20dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/logoText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:text="@string/titletop"
-            android:textColor="@color/DarkRed"
-            android:textSize="42sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+    android:background="@drawable/gamebackground"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/affichageNames"
@@ -39,35 +12,48 @@
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:orientation="horizontal"
-        android:paddingBottom="0dp" >
+        android:paddingBottom="0dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp" >
 
         <TextView
             android:id="@+id/score1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.28"
-            android:drawableLeft="@drawable/cerclejaune"
+            android:layout_weight="0.37"
+            android:drawableLeft="@drawable/cerclejaunesmall"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/s21"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/timer"
-            android:layout_width="136dp"
-            android:layout_height="wrap_content"
+            android:layout_width="88dp"
+            android:layout_height="79dp"
+            android:layout_weight="0.03"
+            android:background="@drawable/timer"
             android:gravity="center"
             android:text="@string/timer"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColorLink="@color/white"
+            android:textStyle="bold"
+            android:typeface="normal" />
 
         <TextView
             android:id="@+id/score2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.46"
-            android:drawableRight="@drawable/cerclerouge"
+            android:drawableRight="@drawable/cerclerougesmall"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/s21"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
     </LinearLayout>    
 
     <LinearLayout
@@ -76,22 +62,26 @@
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:orientation="horizontal"
-        android:paddingBottom="10dp" >
+        android:paddingBottom="40dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" >
 
         <TextView
             android:id="@+id/name1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.48"
-            android:text="@string/player1"
             android:gravity="center_vertical|center_horizontal"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:text="@string/player1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/vide"
-            android:layout_width="129dp"
+            android:layout_width="93dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/vs"
+            android:layout_weight="0.99"
             android:gravity="center"
             android:text=""
             android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -101,9 +91,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.46"
-            android:text="@string/player2"
             android:gravity="center_vertical|center_horizontal"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:text="@string/player2"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
     <LinearLayout
         android:id="@+id/grille"
