--- a/res/layout/activity_play.xml
+++ b/res/layout/activity_play.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/gamebackground"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:animateLayoutChanges="true">
 
     <LinearLayout
         android:id="@+id/affichageNames"
@@ -103,7 +104,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:animateLayoutChanges="true" >
 
     </LinearLayout>
     
