--- a/res/layout/activity_apropos.xml
+++ b/res/layout/activity_apropos.xml
@@ -11,14 +11,14 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="10dp"
-        android:paddingLeft="10dp"
+        android:paddingLeft="0dp"
         android:text="@string/txtapropos"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="19sp"
         android:textStyle="bold"
         android:typeface="normal" />
 
